--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "nodemon ./app"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1"
   },
   "devDependencies": {
