--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto": "^1.0.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
