--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "author": "shixtao <shixtao@qq.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ./app"
+    "start": "nodemon ./https"
   },
   "dependencies": {
     "crypto": "^1.0.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-http-to-https": "^1.1.4",
     "express-session": "^1.17.0",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
