--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "author": "shixtao <shixtao@qq.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ./https"
+    "start": "nodemon ./app"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "crypto": "^1.0.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
