删除流量统计

--- a/config/webConfig.json
+++ b/config/webConfig.json
@@ -1,8 +1,1 @@
-{
-    "title": "小涛's 个人博客",
-    "keywords": "小涛,个人博客,个人网站",
-    "description": "小涛的个人博客,是一个分享Web前端开发与Web后端开发知识的原创博客网站,记录大学学习、生活点滴",
-    "copyright": "Copyright © 2019 Shixtao",
-    "record": "蜀ICP备19038262号-1 ",
-    "logo": "/public/home/images/logo.jpg"
-}
+{"title":"小涛's 个人博客2","keywords":"小涛,个人博客,个人网站","description":"小涛的个人博客,是一个分享Web前端开发与Web后端开发知识的原创博客网站,记录大学学习、生活点滴","copyright":"Copyright © 2019 Shixtao","record":"蜀ICP备19038262号-1 ","logo":"/public/home/images/logo.jpg"}
