--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "no-inline-comments": "off",
     "no-unused-vars": "off",
     "no-alert":"off",
-    "no-undef":"off"
+    "no-undef":"off",
+    "array-callback-return" :"off"
   }
 }
