--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "dev": "egg-bin dev",
     "start": "egg-scripts start --daemon",
     "stop": "egg-scripts stop",
-    "debug": "egg-bin debug",
-    "build": "gulp js && gulp css"
+    "debug": "egg-bin debug"
   },
   "dependencies": {
     "await-stream-ready": "^1.0.1",
@@ -41,13 +40,6 @@
     "egg-bin": "^4.14.1",
     "egg-ts-helper": "^1.25.8",
     "eslint": "^7.2.0",
-    "eslint-config-egg": "^8.0.1",
-    "gulp": "^4.0.2",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-rev": "^9.0.0",
-    "gulp-rev-collector": "^1.3.3",
-    "gulp-uglify": "^3.0.2"
+    "eslint-config-egg": "^8.0.1"
   }
 }
