--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "egg-validate": "^2.0.2",
     "egg-view-ejs": "^2.0.1",
     "fs.promised": "^3.0.0",
+    "ioredis": "^4.17.3",
     "moment": "^2.27.0",
     "xss": "^1.0.7"
   },
